feature: add billUtil to handle bill list manipulation logic

--- a/src/pages/home/Header/index.module.scss
+++ b/src/pages/home/Header/index.module.scss
@@ -1,6 +1,6 @@
-@import "src/styles/colors";
-@import "src/styles/font";
-@import "src/styles/global";
+@import "../../../styles/colors";
+@import "../../../styles/font";
+@import "../../../styles/global";
 
 .container {
   display: flex;
