--- a/src/pages/home/Header/index.module.scss
+++ b/src/pages/home/Header/index.module.scss
@@ -4,13 +4,14 @@
 
 .container {
   display: flex;
-  align-content: center;
-  justify-content: center;
-  height: $nav-bar-height;
+  flex-direction: column;
+  padding-left: 16px;
+  padding-right: 16px;
   background-color: $red;
 
   .title {
     color: $white;
+    text-align: center;
     font-size: $font-size-large;
   }
 }
