--- a/src/pages/home/CategoryModal/index.module.scss
+++ b/src/pages/home/CategoryModal/index.module.scss
@@ -6,6 +6,7 @@
 .hide {
   visibility: hidden;
 }
+
 .container {
   height: 100vh;
   width: 100vw;
@@ -14,14 +15,14 @@
   position: absolute;
   top: 0;
 
-  .categoryModal {
+  .modal {
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
     background-color: $white;
 
-    .categoryModalHeader {
+    .modalHeader {
       display: flex;
       align-items: center;
       width: 100vw;
@@ -46,13 +47,13 @@
       margin: 0 10px;
       background-color: rgba(0,0,0,.1);
     }
-    .categoryModalContent {
+    .modalContent {
       padding: 0 10px;
       margin-bottom: 70px;
       height: 250px;
       overflow-y: scroll;
 
-      .categoryModalContentHeader {
+      .contentHeader {
         color: #7f7f7f;
         margin: 20px 0;
       }
@@ -97,11 +98,11 @@
         text-align: center;
         line-height: 40px;
       }
-      .cancelButton {
+      .cancel {
         color: black;
         background-color: white;
       }
-      .confirmButton {
+      .confirm {
         color: white;
         background-color: $red;
       }
