--- a/src/pages/home/Header/index.module.scss
+++ b/src/pages/home/Header/index.module.scss
@@ -12,6 +12,8 @@
   .title {
     color: $white;
     text-align: center;
-    font-size: $font-size-large;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 40px;
   }
 }
