--- a/src/pages/home/Header/index.module.scss
+++ b/src/pages/home/Header/index.module.scss
@@ -5,8 +5,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  padding-left: 16px;
-  padding-right: 16px;
+  padding: 20px 16px 60px;
   background-color: $red;
 
   .title {
