--- a/src/components/ModalHeader/index.module.scss
+++ b/src/components/ModalHeader/index.module.scss
@@ -1,13 +1,13 @@
 .container {
   display: flex;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   height: 50px;
-  justify-content: center;
+  position: relative;
 
   span {
     font-size: 16px;
-    font-weight: 400;
+    font-weight: 500;
   }
   img {
     width: 28px;
@@ -20,5 +20,13 @@
   .right {
     position: absolute;
     right: 10px;
+  }
+  .centralTitle {
+    width: 100%;
+    text-align: center;
+  }
+  .leftTitle {
+    padding-left: 10px;
+    text-align: left;
   }
 }
