refactor: extract common component & hooks

--- a/src/components/PageHeader/index.module.scss
+++ b/src/components/PageHeader/index.module.scss
@@ -1,6 +1,4 @@
-@import "../../../styles/colors";
-@import "../../../styles/font";
-@import "../../../styles/global";
+@import "../../styles/colors";
 
 .container {
   display: flex;
