--- a/src/components/PageHeader/index.module.scss
+++ b/src/components/PageHeader/index.module.scss
@@ -3,7 +3,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  padding: 20px 16px 60px;
+  padding: 20px 16px 0;
   background-color: $red;
 
   .title {
