--- a/src/pages/expenditureRanking/index.module.scss
+++ b/src/pages/expenditureRanking/index.module.scss
@@ -1,4 +1,16 @@
+@import '../../styles/colors';
+
 .container {
   height: 100vh;
   width: 100vw;
+  .header {
+    padding-bottom: 20px;
+
+    .headerLabel {
+      margin-top: 10px;
+      font-size: 16px;
+      line-height: 30px;
+      color: $white;
+    }
+  }
 }
