refactor: refine BillType data model

--- a/src/components/CardItem/index.module.scss
+++ b/src/components/CardItem/index.module.scss
@@ -15,7 +15,10 @@
     flex: 1;
   }
   .right {
-    width: 100px;
+    max-width: 120px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     text-align: right;
     font-weight: 500;
   }
