--- a/src/pages/home/StatisticPanel/index.module.scss
+++ b/src/pages/home/StatisticPanel/index.module.scss
@@ -32,6 +32,10 @@
       color: #7f7f7f;
     }
     .text {
+      max-width: 120px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
       font-size: 16px;
       font-weight: 500;
     }
