--- a/src/components/PageHeader/index.module.scss
+++ b/src/components/PageHeader/index.module.scss
@@ -5,12 +5,20 @@
   flex-direction: column;
   padding: 20px 16px 0;
   background-color: $red;
-
-  .title {
-    color: $white;
-    text-align: center;
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 40px;
+  .titleContainer {
+    img {
+      position: absolute;
+      left: 10px;
+      top: 42px;
+      width: 24px;
+      height: 24px;
+    }
+    h1 {
+      color: $white;
+      text-align: center;
+      font-size: 20px;
+      font-weight: 500;
+      line-height: 40px;
+    }
   }
 }
