--- a/src/pages/createBill/BillTypeButton/index.module.scss
+++ b/src/pages/createBill/BillTypeButton/index.module.scss
@@ -7,7 +7,7 @@
   font-size: 16px;
   font-weight: 400;
   background-color: rgba(200,200,200,.2);
-  color: black;
+  color: $black;
   padding: 10px 5px;
   text-align: center;
   line-height: 18px;
