--- a/src/components/ModalOverlay/index.module.scss
+++ b/src/components/ModalOverlay/index.module.scss
@@ -1,4 +1,5 @@
 @import "../../styles/colors";
+@import "../../styles/global";
 
 .show {
   visibility: visible;
@@ -10,7 +11,7 @@
 .container {
   height: 100vh;
   width: 100vw;
-  z-index: 1000;
+  z-index: $z-index-top;
   background-color: rgba(0, 0, 0, .6);
   position: absolute;
   top: 0;
