--- a/src/components/MonthButton/index.module.scss
+++ b/src/components/MonthButton/index.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/colors";
+
 .container {
   display: flex;
   align-items: center;
@@ -5,7 +7,7 @@
 
   span {
     font-size: 16px;
-    color: white;
+    color: $white;
     margin-right: 5px;
     line-height: 30px;
   }
