--- a/src/pages/home/CategoryButton/index.module.scss
+++ b/src/pages/home/CategoryButton/index.module.scss
@@ -1,3 +1,5 @@
+@import "../../../styles/colors";
+
 .container {
   width: 108px;
   display: flex;
@@ -14,7 +16,7 @@
 
   span {
     font-size: 16px;
-    color: white;
+    color: $white;
     margin-right: 5px;
   }
 
