--- a/src/pages/home/CategoryModal/index.module.scss
+++ b/src/pages/home/CategoryModal/index.module.scss
@@ -13,7 +13,7 @@
       overflow-y: scroll;
 
       .contentHeader {
-        color: #7f7f7f;
+        color: $darkGray;
         margin: 20px 0;
       }
       .categoryList {
